mail/static/mail/styles.css
textarea {
    min-height: 400px;
}

.layout {
    display: grid;
    grid-template-areas: "sidebar header"
                         "sidebar main";

    grid-template-columns: auto 1fr;
    grid-template-rows: auto 1fr;
    
    height: 100dvh;
}

/* --- Base Styles (Large Screens) --- */
.sidebar {
    grid-area: sidebar;

    width: 240px;
    display: flex;
    flex-direction: column;
}

.nav-items {
    flex-grow: 1;

    display: flex;
    flex-direction: column;
    list-style: none;
}

.nav-btn {
    background: none;
    border: none;
    color: inherit;
    text-align: left;

    width: 100%;

    display: flex;
    align-items: center;

    padding: 1rem;
    cursor: pointer;
    /* overflow: hidden; */
}

.nav-btn:hover {
    background-color: #d8d8d8;
}

.sidebar-brand, .nav-icon {
    width: 32px;
    height: 32px;
    flex-shrink: 0;
}

.sidebar-title, .nav-text {
    margin-left: 1rem;
}

/* ===== Sidebar For Smaller Screens ===== */
@media (max-width: 768px) {
    .sidebar {
        width: auto;
    }

    .sidebar-title, .nav-text {
        display: none;
    }

    .nav-btn:hover {

    }
}

.header {
    grid-area: header;

    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
}

.main {
    grid-area: main;

    display: flex;
    flex-direction: column;

    overflow-y: auto;
}

#emails-view, #compose-view {
    /* background-color: #f4f6f9;
    border: 1px solid rgba(70, 70, 70, 0.774); */

    flex-grow: 1;
}

.email-item {
    text-decoration: none;
    color: inherit;

    transition: transform 0.3s;
}

.email-item:hover {
    transform: translateX(24px);
    /* transform: scale(1.05); */
}

/* ==== Testing Purposes ====*/
.border-red {
    border: 1px solid red;
}

.border-blue {
    border: 1px solid blue;
}

.border-green {
    border: 1px solid lime;
}

